# rss

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker_publish.yml
rss_archiver/: api.py  database.py  monitor.py
