[tool.poetry]
name = "rss_archiver"
version = "0.1.0"
description = ""
authors = ["Ryu1845 <ryu@tpgjbo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
SQLAlchemy = "^1.4.39"
feedparser = "^6.0.10"
celery = "^5.2.7"
redis = "^4.3.4"
psycopg2-binary = "^2.9.3"
httpx = "^0.23.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
